--- a/app_salespage/css/style.css
+++ b/app_salespage/css/style.css
@@ -4,11 +4,14 @@ body {
 .em-text{
 	color:#1caa98 !important;
 }
+.col-md-4{
+	margin-bottom: 20px;
+}
 section{
 	padding: 40px 0 40px 0;
 }
 .jumbotron{
-	background: url(../img/site_showcase_bg.jpg) no-repeat top center ;
+	background: #1b222a url(../img/site_showcase_bg.jpg) no-repeat top center ;
 	color: #fff;
 	height: 500px;
 	overflow: none;
@@ -42,6 +45,11 @@ section#feature ul li{
 	list-style: none;
 	line-height: 2.0em;
 }
+
+section#feature ul{
+	padding: 0;
+	margin: 0;
+}
 footer{
 	background: #333;
 	color: #fff;
@@ -58,4 +66,71 @@ footer a{
 }
 footer p{
 	float: right;
+}
+section#title-bar{
+	padding: 0;
+	margin: 0;
+	height: 80px;
+	background:#1caa98;
+	color: #fff;
+}
+section#title-bar h1{
+	margin-bottom: 20px;
+}	
+/*MEDIA QUERIES*/
+
+@media(max-width: 1200px) {
+    body {
+        
+    }
+}
+
+@media(max-width: 991px){
+	.showcase-img{
+		display: none;
+	}
+}
+
+@media(min-width: 768px) and (max-width: 990px){
+	.jumbotron img.app-btn{
+		width: 30%;
+	}
+	.jumbotron{
+		height: 500px !important;
+		background-size: 100% 100%;
+	}
+	.jumbotron h1{
+		margin-top: 10px;
+	}
+}
+@media(max-width: 768px){
+	.jumbotron{
+		height: 350px !important;
+		background-size: 100% 100%;
+	}
+	.jumbotron h1{
+		margin-top: 10px;
+	}
+}
+
+@media(max-width: 500px){
+	.jumbotron{
+		height: 450px !important;
+		background-image: none;
+		text-align: center;
+	}
+	.jumbotron img.app-btn{
+		width: 60%;
+		margin: 0 auto 30px auto;
+		display: block;
+
+	}
+	section#feature ul li{
+		font-size: 19px !important;
+	}
+	footer p{
+		float: none;
+		text-align: center;
+		padding-top: 20px;
+	}
 }
