final updates with jquery easing functions related to scrolling

--- a/digital_agency/less/main.less
+++ b/digital_agency/less/main.less
@@ -123,3 +123,80 @@ a:hover,a:focus{
 		font-size: 25px;
 	}
 }
+
+/* CONTENT SECTION */
+
+.content-section{
+	padding: 70px  0  20px 0;
+}
+
+// ICON BLOCKS
+
+.block-icon-left{
+	overflow: auto;
+	h1,h2,h3,h4,h5,h6{
+		margin: 0 0 10px 0;
+		font-size: 20px;
+	}
+	.icon-content{
+		float:left;
+		width: 70%;
+	}
+	.icon{
+		float: left;
+		width: 30%;
+		margin-top:10px;
+	}
+}
+
+/* WHO SECTION */
+
+.who-section{
+	width: 100%;
+	padding: 50px 0;
+	color: @light;
+	background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
+	background-color: @dark;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+@media(min-width: 767px){
+	.who-section{
+		padding: 100px 0;
+	}
+}
+
+// Client  Section
+
+#clients{
+	text-align: center;
+	padding-bottom: 90px; 
+	img{
+		margin-right: 30px;
+	}
+
+}
+// Contact Section
+
+#contact{
+	background: @dark;
+	color: @light;
+	padding-bottom: 80px;
+}
+
+//Footer Section
+footer{
+	margin-top:10px;
+	padding-top: 30px
+	height:80px;
+	text-align: center;
+}
+
+.page-scroll{
+	-webkit-transition-property: -webkit-transform;
+	-webkit-transition-duration:1s;
+	-moz-transition-property: -webkit-transform;
+	-webkit-transition-duration:1s;
+}
