--- a/digital_agency/css/main.css
+++ b/digital_agency/css/main.css
@@ -8931,3 +8931,68 @@ a:focus {
     font-size: 25px;
   }
 }
+/* CONTENT SECTION */
+.content-section {
+  padding: 70px  0  20px 0;
+}
+.block-icon-left {
+  overflow: auto;
+}
+.block-icon-left h1,
+.block-icon-left h2,
+.block-icon-left h3,
+.block-icon-left h4,
+.block-icon-left h5,
+.block-icon-left h6 {
+  margin: 0 0 10px 0;
+  font-size: 20px;
+}
+.block-icon-left .icon-content {
+  float: left;
+  width: 70%;
+}
+.block-icon-left .icon {
+  float: left;
+  width: 30%;
+  margin-top: 10px;
+}
+/* WHO SECTION */
+.who-section {
+  width: 100%;
+  padding: 50px 0;
+  color: #f4f4f4;
+  background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
+  background-color: #333333;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+@media (min-width: 767px) {
+  .who-section {
+    padding: 100px 0;
+  }
+}
+#clients {
+  text-align: center;
+  padding-bottom: 90px;
+}
+#clients img {
+  margin-right: 30px;
+}
+#contact {
+  background: #333333;
+  color: #f4f4f4;
+  padding-bottom: 80px;
+}
+footer {
+  margin-top: 10px;
+  padding-top: 30px
+	height:80px;
+  text-align: center;
+}
+.page-scroll {
+  -webkit-transition-property: -webkit-transform;
+  -moz-transition-property: -webkit-transform;
+  -webkit-transition-duration: 1s;
+}
