--- a/adm_page/css/style.css
+++ b/adm_page/css/style.css
@@ -57,3 +57,10 @@ footer{
     background-color: #1f87c2;
     color: #fff;
 }
+.actions{
+    float: right;
+    margin-top: 20px;
+}
+.tablesorter th{
+    cursor: pointer;
+}
