--- a/domain_site/css/style.css
+++ b/domain_site/css/style.css
@@ -1,6 +1,9 @@
 body {
   padding-top: 30px;
 }
+section{
+	margin:30px 0;
+}
 .carousel{
 	min-height: 500px;
 	margin-bottom: 60px;
@@ -25,4 +28,11 @@ body {
 }
 .server-img{
 	width: 100%
+}
+.marketing{
+	text-align: center;
+
+}
+h2{
+	font-weight: normal;
 }
