--- a/domain_site/css/style.css
+++ b/domain_site/css/style.css
@@ -1,8 +1,15 @@
 body {
-  padding-top: 30px;
+   	color: #fff;
+   	font-size: 16px;
 }
 section{
-	margin:30px 0;
+	margin:20px 0 30px 0;
+}
+.well{
+	overflow:auto;
+}
+.jumbotron{
+	background: #bf5a16;
 }
 .carousel{
 	min-height: 500px;
@@ -35,4 +42,7 @@ section{
 }
 h2{
 	font-weight: normal;
+}
+.price strong{
+	font-size: 32px;
 }
