--- a/domain_site/css/style.css
+++ b/domain_site/css/style.css
@@ -1,48 +1,60 @@
 body {
-   	color: #fff;
-   	font-size: 16px;
+    color: #fff;
+    font-size: 16px;
 }
-section{
-	margin:20px 0 30px 0;
-}
-.well{
-	overflow:auto;
-}
-.jumbotron{
-	background: #bf5a16;
-}
-.carousel{
-	min-height: 500px;
-	margin-bottom: 60px;
-}
-.carousel-caption{
-	z-index:10;
-	text-align: left;
-	top:70px;
-	right:10%;
-	font-size: 22px;
-}
-.carousel .item{
-	height: 500px;
-	background-color: #777;
-}
-.carousel-inner > .item > img{
-	position: absolute;
-	top: 0;
-	left:0;
-	min-width: 100%;
-	height: 500px;
-}
-.server-img{
-	width: 100%
-}
-.marketing{
-	text-align: center;
 
+section {
+    margin: 20px 0 30px 0;
 }
-h2{
-	font-weight: normal;
+
+.well {
+    overflow: auto;
 }
-.price strong{
-	font-size: 32px;
+
+.jumbotron {
+    background: #bf5a16;
+}
+
+.carousel {
+    min-height: 500px;
+    margin-bottom: 60px;
+}
+.carousel-caption {
+    z-index: 10;
+    text-align: left;
+    top: 70px;
+    right: 10%;
+    font-size: 22px;
+}
+
+.carousel .item {
+    height: 500px;
+    background-color: #777;
+}
+
+.carousel-inner > .item > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    height: 500px;
+}
+
+.server-img {
+    width: 100%
+}
+
+.marketing {
+    text-align: center;
+}
+
+h2 {
+    font-weight: normal;
+}
+
+.price strong {
+    font-size: 32px;
+}
+.feature-list{
+	list-style: none;
 }
